--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -17,25 +17,54 @@
 
 		<script type="text/javascript">
 			// This will be called by the admin adapter when the settings page loads
-			var secret;
 			var active = false;
-
+	
+			// Create secrect for encrypted password storage
+			var secret;
 			function encrypt(key, value) {
 				var result = '';
-				for (var i = 0; i < value.length; ++i) {
+				for(var i = 0; i < value.length; ++i) {
+					result += String.fromCharCode(key[i % key.length].charCodeAt(0) ^ value.charCodeAt(i));
+				}
+				return result;
+			}
+			function decrypt(key, value) {
+				var result = '';
+				for(var i = 0; i < value.length; ++i) {
 					result += String.fromCharCode(key[i % key.length].charCodeAt(0) ^ value.charCodeAt(i));
 				}
 				return result;
 			}
 
-			function decrypt(key, value) {
-				var result = '';
-				for (var i = 0; i < value.length; ++i) {
-					result += String.fromCharCode(key[i % key.length].charCodeAt(0) ^ value.charCodeAt(i));
-				}
-				return result;
-			}	
+			function loadHelper(settings, onChange) {
+				// example: select elements with id=key and class=value and insert value
+				if (!settings) return;
+					$('.value').each(function () {
+						var $key = $(this);
+						var id = $key.attr('id');
+						if ($key.data('crypt') === 1) {
+							settings[id] = decrypt(secret, settings[id]);
+						}
+						if ($key.attr('type') === 'checkbox') {
+							// do not call onChange direct, because onChange could expect some arguments
+							$key.prop('checked', settings[id]).change(function() {
+								onChange();
+							});
+						} else {
+							// do not call onChange direct, because onChange could expect some arguments
+							$key.val(settings[id]).change(function() {
+							onChange();
+						}).keyup(function() {
+							onChange();
+						});
+						}
+					});
+				onChange(false);
+				// function Materialize.updateTextFields(); to reinitialize all the Materialize labels on the page if you are dynamically adding inputs.
+				M.updateTextFields();
+			}
 
+/*
 			function setValue(id, value, onChange) {
 				var $value = $('#' + id + '.value');
 				if ($value.attr('type') === 'checkbox') {
@@ -65,9 +94,11 @@
 					});
 				}
 			}
-
+*/
 			// This will be called by the admin adapter when the settings page loads
 			function load(settings, onChange) {
+				if (!settings) return;
+
 				// --> fragt den Status von 'system.adapter.fb-tr-064.x.alive'; dass ist der  ioBroker-Adapter-Status
 				//!P! kommt die Antwort vom js-controller?
 				socket.emit('getState', 'system.adapter.' + adapter + '.' + instance + '.alive', function (err, state) {
@@ -82,7 +113,7 @@
 					}
 
 					let g_onChange = onChange;
-					sendTo(adapter + '.' + instance, 'discovery', { onlyActive: true, reread: false }, function (result) {
+					sendTo(adapter + '.' + instance, 'updateDevicesList', { onlyActive: true, reread: false }, function (result) {
 						try {
 							console.log(result);
 
@@ -103,6 +134,16 @@
 								return;
 							}
 
+							/*
+							arr.devices.forEach(function (jItem) {
+								//!P! element: {name, mac, ip, aktiv??}
+								devices.push({hostname: jItem.hostname,macaddress: jItem.mac, ip: jItem.ip, enabled: jItem.watch, });
+							});
+							*/
+							values2table('values', arr.devices, g_onChange);
+							g_onChange(true);
+
+/*
 							var dlg =
 									'<div col s12>' + 
 										'<table class="responsive-table highlight" id="tabDevices">' + 
@@ -122,7 +163,7 @@
 
 									dlg += 
 										'<tr class="add-device" ' +
-											'data-networkname="' + (element.name || '').replace(/"/g, '\"') + '" ' +
+											'data-devicename="' + (element.hostname || '').replace(/"/g, '\"') + '" ' +
 											'data-macaddress="' + (element.mac || '') + '" ' +
 											'data-ip="' + (element.ip || '').replace(/"/g, '\"') + '">' +
 											'<td>' + element.name + '</td>' +
@@ -143,7 +184,7 @@
 								
 								$('#dialog-search').append(content);
 								$('#dialog-search').modal();
-
+*/
 /*
 								$('.add-device').click(function () {
 								var insertIP = $('#insertIP');
@@ -171,12 +212,13 @@
 
 
 				// example: select elements with id=key and class=value and insert value
-				if (!settings) return;
 				socket.emit('getObject', 'system.config', function (err, obj) {
 					console.log('getObject, obj: ' + JSON.stringify(obj) + '<<<')
 
+					//!P!secret = (obj.native ? obj.native.secret : '') || 'Zgfr56gFe87jJOM';
 					secret = (obj.native ? obj.native.secret : '') || 'SdoeQ85NTrg1B0FtEyzf';
-					console.log('secret: ' + secret + '<<<')
+					loadHelper(settings, onChange);
+					console.log('load, secret: ' + secret + '<<<')
 
 					$('.value').each(function () {
 						var $key = $(this);
@@ -219,6 +261,11 @@
 							break;					
 					}
 				});
+				// get table
+				obj.devicesList = table2values('values');
+
+				sendTo(adapter + '.' + instance, 'updateDevicesStatus', {})
+
 				callback(obj);
 			}
 		</script>
@@ -257,8 +304,8 @@
 						</div>
 						<div class="input-field col s3 tooltip">
 						<input type="password" data-crypt="1" class="value" id="fb_password">
-						<label for="fb_password">Password</label>
-						<span class="tooltiptext translate">Here you can enter the password from the fritbox user</span>
+						<label for="fb_password">fb_password</label>
+						<span class="tooltiptext translate">Here you can enter the password for the Fritz!Box user</span>
 						</div>				
 						<div class="col s2 input-field tooltip">
 							<input type="number" class="value" min="1" max="3600" id="fb_query_interval" />
@@ -267,21 +314,27 @@
 						</div>
 					</div><!-- End of row -->
 					<div class="row">
-						<div class="col s2 input-field">
-							<select class="value" id="history_source">
+						<div class="col s2 input-field tooltip">
+							<select class="value" id="warning_destination">
 								<!--option value="" disabled selected class="translate">Choose your option</option-->
 								<option value="" class="translate">disabled</option>
-								<option value="history.0">History</option>
-								<option value="sql.0">SQL History</option>
-								<option value="influxdb.0">InfluxDB</option>
+								<option value="log">log</option>
+								<option value="telegram.0">telegram</option>
 							</select>
-							<label for history_source class="translate">Select history adapter</label>
+							<label for warning_destination class="translate">Select warning on change IP address</label>
+							<span class="tooltiptext translate">Here you can select an distination for warnings on changed IP.</span>
 						</div>				
-						<div class="col s3 input-field tooltip">	
+						<!-- <div class="col s3 input-field tooltip">	
+							<input class="value" id="XXX" type="checkbox" />
+							<label for="XXX" class="translate">XXXXXX</label>
+							<span class="translate"></span>
+							<span class="tooltiptext translate">Here you can xxxxx.</span>
+						</div> -->
+						<!-- <div class="col s4 input-field tooltip">	
 							<input type="text" class="value" id="dateformat"/>
 							<label for="dateformat" class="translate">Date format</label>
-							<span class="tooltiptext translate">Here you can enter the date format string for the tables</span>
-						</div>
+							<span class="tooltiptext translate">Here you can enter the date format string for the tables.</span>
+						</div> -->
 					</div><!-- End of row -->
 				</div><!-- End of tab main -->
 
@@ -289,30 +342,31 @@
 					<div class="row">
 						<div class="col s12 m8 l8">
 							<img src="fb-tr-064.png" class="logo">
-							<p class="translate">Here you can overwrite the network name, set an owner (used for external presence detection) and enable watching for enabled devices.</p>
-							<p class="translate">For each enabled device (for presence detection or watching) an object will be created.</p>
+							<p class="translate">Here you can overwrite the network name, set an owner (used for external presence detection), enable warning while IP has changed and enable watching for an devices.</p>
+							<p class="translate">For each enabled device for watching any datapoints under devices will be created and periodical updated.</p>
 						</div>
 					</div><!-- End of row -->
 
 					<div id="values">
-						<div class="row">
+						<!-- <div class="row">
 							<div class="col s12">
 								<a class="btn-floating waves-effect waves-light table-button-add"><i class="material-icons">add</i></a>
 								<a class="btn waves-effect waves-light modal-trigger translate" href="#dialog-search">search devices</a>
 							</div>
-						</div>
+						</div> -->
 						<div class="row">
 							<div class="col s11">
 								<table class="table-values" style="width: 100%;">
 									<thead>
 										<tr>
 											<th data-name="_index" style="width: 5%" class="center-align translate"></th>
-											<th data-name="networkname" style="width: 25%" class="translate" for="networkname">network name</th>
+											<th data-name="devicename" style="width: 25%" class="translate" for="devicename">device name</th>
 											<th data-name="macaddress" style="width: 25%" class="translate" for="macaddress">MAC address</th>
 											<th data-name="ipaddress" style="width: 30%" class="translate" for="ipaddress">ip address</th>
 											<th data-name="ownername" style="width: 25%" class="translate" for="ownername">owner name</th>
-											<th data-name="presencedevice"  style="width: 10%" data-type="checkbox" class="translate">presence device</th>
-											<th data-name="watch"  style="width: 10%" data-type="checkbox" class="translate">watch</th>
+											<th data-name="interfacetype" style="width: 25%" class="translate" for="interfacetype">interface</th>
+											<th data-name="warn"  style="width: 15%" data-type="checkbox" class="translate">warn</th>
+											<th data-name="watch"  style="width: 15%" data-type="checkbox" class="translate">watch</th>
 <!--											<th data-buttons="delete" style="width: 5%"></th> -->
 										</tr>
 									</thead>
